chapter10/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "prometheus"
  namespace: "prometheus"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.http-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/inbound-cidrs: 192.2.0.10/32, 192.2.0.200/32
  labels:
    app: prometheus
    cluster: prometheus
spec:
  rules:
    - host: "prometheus.eks.example.com"
      http:
        paths:
          - path: /*
            backend:
              serviceName: http-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: prometheus-service
              servicePort: 9093
